--- a/HJ/temp_python.ipynb
+++ b/HJ/temp_python.ipynb
@@ -955,18 +955,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# m\tmusicinfos\tanswer      start, end, name,  code\n",
-    "# m, musicinfos = \"ABCDEFG\",[\"12:00,12:14,HELLO,CDEFGAB\", \"13:00,13:05,WORLD,ABCDEF\"]#\t\"HELLO\"\n",
-    "# m, musicinfos = \"CC#BCC#BCC#BCC#B\",[\"03:00,03:30,FOO,CC#B\", \"04:00,04:08,BAR,CC#BCC#BCC#B\"]#\t\"FOO\"\n",
-    "m, musicinfos = \"ABC\",[\"12:00,12:14,HELLO,C#DEFGAB\", \"13:00,13:05,WORLD,ABCDEF\"]#\t\"WORLD\""
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
    "outputs": [
@@ -1119,16 +1107,460 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0 9 19 20\n10 14 19 6\n15 17 19 2\n15 15 16 4\n4 15\n"
+     ]
+    }
+   ],
+   "source": [
+    "def solution(ddocs,m):\n",
+    "    st,end = 0,max(ddocs)\n",
+    "    while st<=end:\n",
+    "        mid=(st+end)//2\n",
+    "        lent = sum(list(map(lambda x:x-mid if x>=mid else 0, ddocs)))\n",
+    "        print(st,mid,end,lent)\n",
+    "        if lent >= m:\n",
+    "            st=mid+1\n",
+    "        # elif lent == m: \n",
+    "        #     st=mid\n",
+    "        else:\n",
+    "            end=mid-1\n",
+    "        # break\n",
+    "    print(lent,mid)\n",
+    "ddoc,m=[19,15,10,7,8,12],6\n",
+    "solution(ddoc,m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "77"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 23
+    }
+   ],
+   "source": [
+    "def solution(arr):\n",
+    "    answer = 0\n",
+    "\n",
+    "    return answer\n",
+    "def gcd(a,b):\n",
+    "    if b==0:return a\n",
+    "    else: return gcd(b,a%b)\n",
+    "    \n",
+    "def lcm(a,b):\n",
+    "    return a*b//gcd(a,b)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cacheSize, cities=3,[\"Jeju\", \"Pangyo\", \"Seoul\", \"NewYork\", \"LA\", \"Jeju\", \"Pangyo\", \"Seoul\", \"NewYork\", \"LA\"]#50\n",
-    "# cacheSize, cities=3,[\"Jeju\", \"Pangyo\", \"Seoul\", \"Jeju\", \"Pangyo\", \"Seoul\", \"Jeju\", \"Pangyo\", \"Seoul\"]#21\n",
-    "# cacheSize, cities=2,[\"Jeju\", \"Pangyo\", \"Seoul\", \"NewYork\", \"LA\", \"SanFrancisco\", \"Seoul\", \"Rome\", \"Paris\", \"Jeju\", \"NewYork\", \"Rome\"]#60\n",
-    "# cacheSize, cities=5,[\"Jeju\", \"Pangyo\", \"Seoul\", \"NewYork\", \"LA\", \"SanFrancisco\", \"Seoul\", \"Rome\", \"Paris\", \"Jeju\", \"NewYork\", \"Rome\"]#52\n",
-    "# cacheSize, cities=2,[\"Jeju\", \"Pangyo\", \"NewYork\", \"newyork\"]#16\n",
-    "# cacheSize, cities=0,[\"Jeju\", \"Pangyo\", \"Seoul\", \"NewYork\", \"LA\"]#25"
+    "def find(arr):\n",
+    "    maxx=1\n",
+    "    for i in arr:\n",
+    "        maxx*=i\n",
+    "    \n",
+    "    st,end=1,maxx\n",
+    "    while st<end:\n",
+    "        mid = (st+end)//2\n",
+    "        tmp = list(filter(lambda x : mid%x!=0, arr))\n",
+    "        if tmp:\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "record=[\"Enter uid1234 Muzi\", \"Enter uid4567 Prodo\",\"Leave uid1234\",\"Enter uid1234 Prodo\",\"Change uid4567 Ryan\"]\n",
+    "result=[\"Prodo님이 들어왔습니다.\", \"Ryan님이 들어왔습니다.\", \"Prodo님이 나갔습니다.\", \"Prodo님이 들어왔습니다.\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[['uid1234', '님이 들어왔습니다.']]\n[['uid1234', '님이 들어왔습니다.'], ['uid4567', '님이 들어왔습니다.']]\n[['uid1234', '님이 들어왔습니다.'], ['uid4567', '님이 들어왔습니다.'], ['uid1234', '님이 나갔습니다.']]\n[['uid1234', '님이 들어왔습니다.'], ['uid4567', '님이 들어왔습니다.'], ['uid1234', '님이 나갔습니다.'], ['uid1234', '님이 들어왔습니다.']]\n[['uid1234', '님이 들어왔습니다.'], ['uid4567', '님이 들어왔습니다.'], ['uid1234', '님이 나갔습니다.'], ['uid1234', '님이 들어왔습니다.']]\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "['Prodo님이 들어왔습니다.', 'Ryan님이 들어왔습니다.', 'Prodo님이 나갔습니다.', 'Prodo님이 들어왔습니다.']"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 36
+    }
+   ],
+   "source": [
+    "# from collections import defaultdict\n",
+    "def solution(record=record):\n",
+    "    dic=dict()\n",
+    "    answer=[]\n",
+    "    tmp=[]\n",
+    "    for recd in record:\n",
+    "        rec = recd.split()\n",
+    "        if rec[0]=='Enter':\n",
+    "            dic[rec[1]]=rec[2]\n",
+    "            tmp.append([rec[1],'님이 들어왔습니다.'])\n",
+    "        elif rec[0]=='Leave':\n",
+    "            # del(dic[rec[1]])\n",
+    "            dic.pop(rec[1])\n",
+    "            tmp.append([rec[1],'님이 나갔습니다.'])\n",
+    "        elif rec[0]=='Change':\n",
+    "            dic[rec[1]]=rec[2]    \n",
+    "    return list(map(lambda x : f'{dic[x[0]]}{x[1]}', tmp))\n",
+    "solution()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "['Prodo님이 들어왔습니다.', 'Ryan님이 들어왔습니다.', 'Prodo님이 나갔습니다.', 'Prodo님이 들어왔습니다.']"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 38
+    }
+   ],
+   "source": [
+    "def solution(record):\n",
+    "    user_id = {EC.split()[1]:EC.split()[-1] for EC in record if EC.startswith('E') or EC.startswith('C')}\n",
+    "    return [f'{user_id[E_L.split()[1]]}님이 들어왔습니다.' if E_L.startswith('E') else f'{user_id[E_L.split()[1]]}님이 나갔습니다.' for E_L in record if not E_L.startswith('C')]\n",
+    "solution(record)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(record):\n",
+    "    answer = []\n",
+    "    userdict={}\n",
+    "    ans=[]\n",
+    "    for line in record:\n",
+    "        i = line.split()\n",
+    "        if i[0]=='Enter':\n",
+    "            tmp = userdict.get(i[1])\n",
+    "            if tmp : \n",
+    "                userdict[i[1]] = i[2]\n",
+    "            else:\n",
+    "                userdict[i[1]] = i[2]\n",
+    "            ans.append([i[1],'님이 들어왔습니다.'])\n",
+    "        elif i[0]=='Leave':\n",
+    "            ans.append([i[1], '님이 나갔습니다.'])\n",
+    "        else:\n",
+    "            print('change')\n",
+    "            userdict[i[1]] = i[2]\n",
+    "            \n",
+    "    answer = list(map(lambda x : f'{userdict[x[0]]}{x[1]}' , ans))\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[('frodo', 'fradi'),\n",
+       " ('frodo', 'crodo'),\n",
+       " ('frodo', 'abc123'),\n",
+       " ('frodo', 'frodoc'),\n",
+       " ('fradi', 'frodo'),\n",
+       " ('fradi', 'crodo'),\n",
+       " ('fradi', 'abc123'),\n",
+       " ('fradi', 'frodoc'),\n",
+       " ('crodo', 'frodo'),\n",
+       " ('crodo', 'fradi'),\n",
+       " ('crodo', 'abc123'),\n",
+       " ('crodo', 'frodoc'),\n",
+       " ('abc123', 'frodo'),\n",
+       " ('abc123', 'fradi'),\n",
+       " ('abc123', 'crodo'),\n",
+       " ('abc123', 'frodoc'),\n",
+       " ('frodoc', 'frodo'),\n",
+       " ('frodoc', 'fradi'),\n",
+       " ('frodoc', 'crodo'),\n",
+       " ('frodoc', 'abc123')]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 77
+    }
+   ],
+   "source": [
+    "import itertools\n",
+    "\n",
+    "# print(list(map(''.join, itertools.combinations(['a','b','c','d'], 2)))) # 2개의 원소로 수열 만들기\n",
+    "# list(itertools.combinations(['a','b','c','d'], 1))\n",
+    "list(itertools.permutations([\"frodo\", \"fradi\", \"crodo\", \"abc123\", \"frodoc\"], 2))\n",
+    "# {1:1,2:2}.keys()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 3
+    }
+   ],
+   "source": [
+    "stones=[2, 4, 5, 3, 2, 1, 4, 2, 5, 1]\n",
+    "k=3\n",
+    "def solution(stones, k):\n",
+    "    if k==1: return min(stones)\n",
+    "    st=1\n",
+    "    end=1e9   \n",
+    "    while st<=end:\n",
+    "        mid = (st+end)//2\n",
+    "        tmp = [i-mid for i in stones]\n",
+    "        \n",
+    "        cnt=0\n",
+    "        check=False\n",
+    "        for i in range(len(tmp)):\n",
+    "            if tmp[i]<=0: cnt+=1\n",
+    "            else: cnt=0\n",
+    "\n",
+    "            if cnt>=k:\n",
+    "                check=True\n",
+    "                break\n",
+    "        if check: end=mid-1\n",
+    "        else: st=mid+1\n",
+    "    return int(st)\n",
+    "\n",
+    "solution(stones, k)<<<<<\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-6f46a4143dfe>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     19\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmid\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0ml\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m \u001b[0msolution\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstones\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-7-6f46a4143dfe>\u001b[0m in \u001b[0;36msolution\u001b[0;34m(stones, k)\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0;32mwhile\u001b[0m \u001b[0mleft\u001b[0m\u001b[0;34m<\u001b[0m\u001b[0mright\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m         \u001b[0mmid\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mleft\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mright\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m//\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m         \u001b[0mcanjump\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcheck\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstones\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmid\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mcanjump\u001b[0m \u001b[0;34m:\u001b[0m \u001b[0ml\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmid\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmid\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-7-6f46a4143dfe>\u001b[0m in \u001b[0;36mcheck\u001b[0;34m(stones, k, mid)\u001b[0m\n\u001b[1;32m      3\u001b[0m         \u001b[0mtemp\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mstone\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mstones\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m             \u001b[0;32mif\u001b[0m \u001b[0mstone\u001b[0m\u001b[0;34m<\u001b[0m\u001b[0mmid\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m                 \u001b[0mtemp\u001b[0m\u001b[0;34m-=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "def solution(stones, k):\n",
+    "    def check(stones,k,mid):\n",
+    "        temp=k\n",
+    "        for stone in stones:\n",
+    "            if stone<mid:\n",
+    "                temp-=1\n",
+    "            else:\n",
+    "                temp=k\n",
+    "            \n",
+    "            if temp==0: return False\n",
+    "        return True\n",
+    "\n",
+    "    left=0\n",
+    "    right=1e9\n",
+    "    while left<right-1:\n",
+    "        mid=(left+right)//2\n",
+    "        canjump = check(stones,k,mid)\n",
+    "        if canjump : l=mid\n",
+    "        else: r=mid\n",
+    "    return l\n",
+    "solution(stones,k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(stones, k):\n",
+    "    answer = 0\n",
+    "    lo = 1\n",
+    "    hi = max(stones)\n",
+    "\n",
+    "    while lo <= hi:\n",
+    "        mid = (lo + hi) // 2\n",
+    "        cnt = 0\n",
+    "        res = 0\n",
+    "\n",
+    "        for n in stones:\n",
+    "            cnt = cnt + 1 if n - mid <= 0 else 0\n",
+    "            res = max(res, cnt)\n",
+    "\n",
+    "        if res < k:\n",
+    "            answer = max(answer, mid)\n",
+    "            lo = mid + 1\n",
+    "        else:\n",
+    "            hi = mid -1\n",
+    "\n",
+    "    return answer + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0 0 1 1\n[4, 1, 3]\n[5, 2, 6]\n[7, 8, 9]\n1\n0 1 1 2\n[4, 2, 1]\n[5, 6, 3]\n[7, 8, 9]\n1\n1 0 2 1\n[4, 2, 1]\n[7, 5, 3]\n[8, 6, 9]\n5\n1 1 2 2\n[4, 2, 1]\n[7, 6, 5]\n[8, 9, 3]\n3\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[1, 1, 5, 3]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 49
+    }
+   ],
+   "source": [
+    "#2021 Dev-matching웹백 행렬테두리 회전하기\n",
+    "# rows,columns,queries\tresult\n",
+    "# rows,columns,queries=6,6,[[2,2,5,4],[3,3,6,6],[5,1,6,3]]#\t[8, 10, 25]\n",
+    "rows,columns,queries=3,3,[[1,1,2,2],[1,2,2,3],[2,1,3,2],[2,2,3,3]]#\t[1, 1, 5, 3]\n",
+    "# rows,columns,queries=100,97,[[1,1,100,97]]#\t[1]\n",
+    "def mprint(mat):\n",
+    "    for m in mat:\n",
+    "        print(m)\n",
+    "\n",
+    "def solution(rows,columns,queries):\n",
+    "    mat=[[1+j+(columns*i) for j in range(columns)] for i in range(rows)]\n",
+    "    # mprint(mat);print()\n",
+    "    answer=[]\n",
+    "    for query in queries:\n",
+    "        mat,miner=rot(mat,query)\n",
+    "        answer.append(miner)\n",
+    "        mprint(mat)\n",
+    "        print(miner)\n",
+    "    return answer\n",
+    "\n",
+    "def rot(mat,q):\n",
+    "    x1,y1=q[0]-1,q[1]-1\n",
+    "    x2,y2=q[2]-1,q[3]-1\n",
+    "    print(x1,y1,x2,y2)\n",
+    "    tmp=mat[x1][y1]\n",
+    "    rt=0\n",
+    "    dx=[1,0,-1,0]\n",
+    "    dy=[0,1,0,-1]\n",
+    "    x,y=x1,y1\n",
+    "    miner=mat[x1][y1]\n",
+    "    while True:\n",
+    "        nx,ny=x+dx[rt], y+dy[rt]\n",
+    "        if rt==0 and nx==x2 and ny<y2:\n",
+    "            rt=1\n",
+    "        elif rt==1 and nx==x2 and ny==y2:\n",
+    "            rt=2\n",
+    "        elif rt==2 and nx==x1:\n",
+    "            rt=3\n",
+    "        elif rt==3 and ny==y1:\n",
+    "            mat[x][y] = tmp\n",
+    "            break\n",
+    "        miner = min(miner,mat[nx][ny])\n",
+    "        mat[x][y]=mat[nx][ny]\n",
+    "        x=nx\n",
+    "        y=ny\n",
+    "    return mat, miner\n",
+    "solution(rows,columns,queries)"
    ]
   }
  ],
