요기요루키히어로

--- a/HJ/temp_python.ipynb
+++ b/HJ/temp_python.ipynb
@@ -1049,6 +1049,10 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def solution(m,n,board):\n",
     "    answer=0\n",
@@ -1099,11 +1103,7 @@
     "# m,n,board = 4,5,[\"CCBDE\", \"AAADE\", \"AAABF\", \"CCBBF\"]#14\n",
     "m,n,board = 6,6,[\"TTTANT\", \"RRFACC\", \"RRRFCC\", \"TRRRAA\", \"TTMMMF\", \"TMMTTJ\"]#15\n",
     "solution(m,n,board)"
-   ],
-   "cell_type": "code",
-   "metadata": {},
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
@@ -1127,10 +1127,14 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "0 9 19 20\n10 14 19 6\n15 17 19 2\n15 15 16 4\n4 15\n"
+      "0 9 19 20\n",
+      "10 14 19 6\n",
+      "15 17 19 2\n",
+      "15 15 16 4\n",
+      "4 15\n"
      ]
     }
    ],
@@ -1159,14 +1163,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "77"
       ]
      },
+     "execution_count": 23,
      "metadata": {},
-     "execution_count": 23
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1218,21 +1222,25 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "[['uid1234', '님이 들어왔습니다.']]\n[['uid1234', '님이 들어왔습니다.'], ['uid4567', '님이 들어왔습니다.']]\n[['uid1234', '님이 들어왔습니다.'], ['uid4567', '님이 들어왔습니다.'], ['uid1234', '님이 나갔습니다.']]\n[['uid1234', '님이 들어왔습니다.'], ['uid4567', '님이 들어왔습니다.'], ['uid1234', '님이 나갔습니다.'], ['uid1234', '님이 들어왔습니다.']]\n[['uid1234', '님이 들어왔습니다.'], ['uid4567', '님이 들어왔습니다.'], ['uid1234', '님이 나갔습니다.'], ['uid1234', '님이 들어왔습니다.']]\n"
+      "[['uid1234', '님이 들어왔습니다.']]\n",
+      "[['uid1234', '님이 들어왔습니다.'], ['uid4567', '님이 들어왔습니다.']]\n",
+      "[['uid1234', '님이 들어왔습니다.'], ['uid4567', '님이 들어왔습니다.'], ['uid1234', '님이 나갔습니다.']]\n",
+      "[['uid1234', '님이 들어왔습니다.'], ['uid4567', '님이 들어왔습니다.'], ['uid1234', '님이 나갔습니다.'], ['uid1234', '님이 들어왔습니다.']]\n",
+      "[['uid1234', '님이 들어왔습니다.'], ['uid4567', '님이 들어왔습니다.'], ['uid1234', '님이 나갔습니다.'], ['uid1234', '님이 들어왔습니다.']]\n"
      ]
     },
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "['Prodo님이 들어왔습니다.', 'Ryan님이 들어왔습니다.', 'Prodo님이 나갔습니다.', 'Prodo님이 들어왔습니다.']"
       ]
      },
+     "execution_count": 36,
      "metadata": {},
-     "execution_count": 36
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1262,14 +1270,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "['Prodo님이 들어왔습니다.', 'Ryan님이 들어왔습니다.', 'Prodo님이 나갔습니다.', 'Prodo님이 들어왔습니다.']"
       ]
      },
+     "execution_count": 38,
      "metadata": {},
-     "execution_count": 38
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1328,7 +1336,6 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[('frodo', 'fradi'),\n",
@@ -1353,8 +1360,9 @@
        " ('frodoc', 'abc123')]"
       ]
      },
+     "execution_count": 77,
      "metadata": {},
-     "execution_count": 77
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1372,14 +1380,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "3"
       ]
      },
+     "execution_count": 3,
      "metadata": {},
-     "execution_count": 3
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1415,9 +1423,9 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "error",
      "ename": "KeyboardInterrupt",
      "evalue": "",
+     "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
@@ -1483,6 +1491,193 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "125000"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "50*50*50"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "board=[[0,0,0],[0,0,0],[0,0,0]]#900\n",
+    "board=[[0,0,0,0,0,0,0,1],[0,0,0,0,0,0,0,0],[0,0,0,0,0,1,0,0],[0,0,0,0,1,0,0,0],[0,0,0,1,0,0,0,1],[0,0,1,0,0,0,1,0],[0,1,0,0,0,1,0,0],[1,0,0,0,0,0,0,0]]\t#3800\n",
+    "board=[[0,0,1,0],[0,0,0,0],[0,1,0,1],[1,0,0,0]]#\t2100\n",
+    "board=[[0,0,0,0,0,0],[0,1,1,1,1,0],[0,0,1,0,0,0],[1,0,0,1,0,1],[0,1,0,0,0,1],[0,0,0,0,0,0]]#\t3200"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3200"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# https://hose0728.tistory.com/76\n",
+    "def solution(board):\n",
+    "    n = len(board)\n",
+    "    from collections import deque\n",
+    "    dx = [-1, 0, 1, 0]\n",
+    "    dy = [0, -1, 0, 1]\n",
+    "    answer = float('inf')\n",
+    "    queue = deque()\n",
+    "    # x좌표 y좌표 방향 비용 순서로 큐에 넣습니다.(방향은 맨처음 시작할 때 -1로 설정)\n",
+    "    queue.append((0, 0, -1, 0))\n",
+    "    visit = {(0, 0, 0): 0, (0, 0, 1): 0, (0, 0, 2): 0, (0, 0, 3): 0}\n",
+    "    while queue:\n",
+    "        x, y, dir1, cost = queue.popleft()\n",
+    "        for d in range(4):\n",
+    "            nx = x + dx[d]\n",
+    "            ny = y + dy[d]\n",
+    "            if -1 < nx < n and -1 < ny < n and not board[nx][ny]:\n",
+    "                newcost = cost\n",
+    "                # 방향이 -1인 경우는 가장 처음에는 방향이 없으므로 비용에 100을 추가\n",
+    "                if dir1 == -1:\n",
+    "                    newcost += 100\n",
+    "                # 기존 방향과 진행 방향이 평행한 경우\n",
+    "                elif (dir1 - d) % 2 == 0:\n",
+    "                    newcost += 100\n",
+    "                # 기존 방향과 진행 방향이 수직인 경우\n",
+    "                else:\n",
+    "                    newcost += 600\n",
+    "                # 목적지에 도착하였을 경우 정답 값과 비교하여 더 작은 것으로 정답 값을 경신\n",
+    "                if nx == n - 1 and ny == n - 1:\n",
+    "                    answer = min(answer, newcost)\n",
+    "                # 기존에 방문하지 않았거나 방문하였을 때보다 비용이 적을 경우에만 큐에 넣습니다.\n",
+    "                elif visit.get((nx, ny, d)) is None or visit.get((nx, ny, d)) > newcost:\n",
+    "                    visit[(nx, ny, d)] = newcost\n",
+    "                    queue.append((nx, ny, d, newcost))\n",
+    "    return answer\n",
+    "solution(board)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'111001'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 18
+    }
+   ],
+   "source": [
+    "def mkbin(N):\n",
+    "    ans=[]\n",
+    "    while N>1:\n",
+    "        N,s=divmod(N,2)\n",
+    "        ans.append(str(s))\n",
+    "    ans.append(str(N))\n",
+    "    answer=''\n",
+    "    while ans:\n",
+    "        answer+=ans.pop()\n",
+    "    return answer\n",
+    "mkbin(57)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "100011101101110100011100001\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 29
+    }
+   ],
+   "source": [
+    "# Codility Binary Gap \n",
+    "def solution(N):\n",
+    "    def mkbin(N):\n",
+    "        ans=[]\n",
+    "        while N>1:\n",
+    "            N,s=divmod(N,2)\n",
+    "            ans.append(str(s))\n",
+    "        ans.append(str(N))\n",
+    "        answer=''\n",
+    "        while ans:\n",
+    "            answer+=ans.pop()\n",
+    "        return answer\n",
+    "    bins=mkbin(N)\n",
+    "    toggle=False\n",
+    "    answer=0\n",
+    "    tmplen=0\n",
+    "    for i in bins:\n",
+    "        if i=='1':\n",
+    "            if toggle:# and tmplen>0: \n",
+    "                answer = max(answer, tmplen)\n",
+    "                tmplen=0\n",
+    "            else: \n",
+    "                toggle=True\n",
+    "        else:\n",
+    "            if toggle:\n",
+    "                tmplen+=1\n",
+    "            else:\n",
+    "                continue\n",
+    "    # print(bins)\n",
+    "    return answer\n",
+    "# solution(1041)\n",
+    "# solution(529)\n",
+    "solution(74901729)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(S, C):\n",
+    "    # write your code in Python 3.6\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -1490,77 +1685,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1\n",
+    "# you can write to stdout for debugging purposes, e.g.\n",
+    "# print(\"this is a debug message\")\n",
+    "\n",
+    "def solution(S, C):\n",
+    "    # write your code in Python 3.6\n",
+    "    names=S.split('; ')\n",
+    "    answer=''\n",
+    "    e_namecnt={} # k=ename_name , v=cnt\n",
+    "    anslist=[]\n",
+    "    for name in names:\n",
+    "        first = name.split()[0]\n",
+    "        last = name.split()[-1]\n",
+    "        e_name = last.replace('-','')+'_'+first\n",
+    "        e_name = e_name.lower()\n",
+    "        if e_namecnt.get(e_name):\n",
+    "            e_namecnt[e_name]+=1\n",
+    "        else:\n",
+    "            e_namecnt[e_name]=1\n",
+    "        cnt=str(e_namecnt[e_name]) if e_namecnt[e_name]!=1 else ''\n",
+    "        e_name+=cnt\n",
+    "\n",
+    "        anslist.append(f\"{name} <{e_name}@{C.lower()}.com>\")\n",
+    "    for i,ans in enumerate(anslist):\n",
+    "        if i==len(anslist)-1: answer+=ans\n",
+    "        else:\n",
+    "            answer+=ans+'; '\n",
+    "    return answer\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "0 0 1 1\n[4, 1, 3]\n[5, 2, 6]\n[7, 8, 9]\n1\n0 1 1 2\n[4, 2, 1]\n[5, 6, 3]\n[7, 8, 9]\n1\n1 0 2 1\n[4, 2, 1]\n[7, 5, 3]\n[8, 6, 9]\n5\n1 1 2 2\n[4, 2, 1]\n[7, 6, 5]\n[8, 9, 3]\n3\n"
+      "1988-08-29        956 system.zip\n1976-09-16     126976 old-photos.tgz\n1987-02-03     118784 logs.rar\n"
      ]
     },
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "[1, 1, 5, 3]"
+       "3"
       ]
      },
      "metadata": {},
-     "execution_count": 49
+     "execution_count": 18
     }
    ],
    "source": [
-    "#2021 Dev-matching웹백 행렬테두리 회전하기\n",
-    "# rows,columns,queries\tresult\n",
-    "# rows,columns,queries=6,6,[[2,2,5,4],[3,3,6,6],[5,1,6,3]]#\t[8, 10, 25]\n",
-    "rows,columns,queries=3,3,[[1,1,2,2],[1,2,2,3],[2,1,3,2],[2,2,3,3]]#\t[1, 1, 5, 3]\n",
-    "# rows,columns,queries=100,97,[[1,1,100,97]]#\t[1]\n",
-    "def mprint(mat):\n",
-    "    for m in mat:\n",
-    "        print(m)\n",
+    "from datetime import date\n",
+    "def solution(S):\n",
+    "    # write your code in Python 3.6\n",
+    "    lines=S.split('\\n')\n",
+    "    datecheck=date(1995,10,13)\n",
+    "    sizecheck=240*(2**10)\n",
+    "    typecheck=['zip','rar','tgz']\n",
+    "    answer=0\n",
+    "    for line in lines:\n",
+    "        y,size,ext = line.split()\n",
+    "        ext=ext.split('.')[-1]\n",
+    "        y=y.split('-')\n",
+    "        if datecheck <= date(int(y[0]), int(y[1]), int(y[2])) : continue\n",
+    "        if int(size) >= sizecheck : continue\n",
+    "        if ext not in typecheck : continue\n",
+    "        answer+=1\n",
+    "    return str(answer) if answer!=0 else \"NO FILES.\"\n",
     "\n",
-    "def solution(rows,columns,queries):\n",
-    "    mat=[[1+j+(columns*i) for j in range(columns)] for i in range(rows)]\n",
-    "    # mprint(mat);print()\n",
-    "    answer=[]\n",
-    "    for query in queries:\n",
-    "        mat,miner=rot(mat,query)\n",
-    "        answer.append(miner)\n",
-    "        mprint(mat)\n",
-    "        print(miner)\n",
+    "S='1988-08-29        956 system.zip\\n1976-09-16     126976 old-photos.tgz\\n1987-02-03     118784 logs.rar\\n1961-12-04  703594496 very-long-filename.rar\\n1980-08-03          2 DELETE-THIS.TXT\\n2014-08-23        138 important.rar\\n2001-08-26     595968 MOONLIGHT-SONATA.FLAC\\n1967-11-30     245760 archive.rar\\n1995-10-13        731 file.tgz'\n",
+    "solution(S)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 68
+    }
+   ],
+   "source": [
+    "# 두 수만 들어있는 연속 리스트 중 최장길이 찾기문제\n",
+    "def solution(A):\n",
+    "    answer=0\n",
+    "    s,e=0,1\n",
+    "    if len(A)<2: return len(A)\n",
+    "    if len(set(A))<=2 : return len(A)\n",
+    "    tmpdic={A[s]:1, A[e]:1}\n",
+    "    while e<len(A)-1:\n",
+    "\n",
+    "        while len(tmpdic)<=2 and e<len(A)-1: \n",
+    "            e+=1\n",
+    "            if A[e] in tmpdic:\n",
+    "                tmpdic[A[e]]+=1\n",
+    "            else:\n",
+    "                if len(tmpdic)==1:\n",
+    "                    tmpdic[A[e]]=1\n",
+    "                else:\n",
+    "                    e-=1\n",
+    "                    break\n",
+    "        cnt=0\n",
+    "        for i in tmpdic:\n",
+    "            cnt+=tmpdic[i]\n",
+    "        answer = max(answer, cnt)\n",
+    "        while len(tmpdic)>1 :\n",
+    "            if tmpdic[A[s]]==1: \n",
+    "                del(tmpdic[A[s]])\n",
+    "            else:\n",
+    "                tmpdic[A[s]]-=1\n",
+    "            s+=1\n",
     "    return answer\n",
-    "\n",
-    "def rot(mat,q):\n",
-    "    x1,y1=q[0]-1,q[1]-1\n",
-    "    x2,y2=q[2]-1,q[3]-1\n",
-    "    print(x1,y1,x2,y2)\n",
-    "    tmp=mat[x1][y1]\n",
-    "    rt=0\n",
-    "    dx=[1,0,-1,0]\n",
-    "    dy=[0,1,0,-1]\n",
-    "    x,y=x1,y1\n",
-    "    miner=mat[x1][y1]\n",
-    "    while True:\n",
-    "        nx,ny=x+dx[rt], y+dy[rt]\n",
-    "        if rt==0 and nx==x2 and ny<y2:\n",
-    "            rt=1\n",
-    "        elif rt==1 and nx==x2 and ny==y2:\n",
-    "            rt=2\n",
-    "        elif rt==2 and nx==x1:\n",
-    "            rt=3\n",
-    "        elif rt==3 and ny==y1:\n",
-    "            mat[x][y] = tmp\n",
-    "            break\n",
-    "        miner = min(miner,mat[nx][ny])\n",
-    "        mat[x][y]=mat[nx][ny]\n",
-    "        x=nx\n",
-    "        y=ny\n",
-    "    return mat, miner\n",
-    "solution(rows,columns,queries)"
+    "        \n",
+    "# A=[0, 5, 4, 4, 5, 12]\n",
+    "# A=[4, 2, 2, 4, 2]\n",
+    "# A=[4,4]\n",
+    "# A=[1,2,3,2]\n",
+    "solution(A)"
    ]
   }
  ],
